fix(history): show proper product count
