# backend/restapi-macroservice/docs/openapi/restapi-macroservice.openapi.json
@@ -746,9 +746,20 @@
             "type": "boolean",
             "description": "Whether the chat interview has been completed",
             "example": false
+          },
+          "giftCount": {
+            "type": "number",
+            "description": "Number of gifts in the chat",
+            "example": 3
           }
         },
-        "required": ["chatId", "chatName", "createdAt", "isInterviewCompleted"]
+        "required": [
+          "chatId",
+          "chatName",
+          "createdAt",
+          "isInterviewCompleted",
+          "giftCount"
+        ]
       },
       "ChatsResponseDto": {
         "type": "object",
@@ -1086,19 +1097,6 @@
         },
         "required": ["messages"]
       },
-      "UserProfilesResponseDto": {
-        "type": "object",
-        "properties": {
-          "profiles": {
-            "description": "List of user profiles",
-            "items": {
-              "type": "array"
-            },
-            "type": "array"
-          }
-        },
-        "required": ["profiles"]
-      },
       "RecipientPersonalInfo": {
         "type": "object",
         "properties": {
@@ -1321,10 +1319,10 @@
           "keyThemes": {
             "description": "Key themes and keywords",
             "example": ["cooking", "gardening", "relaxation"],
+            "type": "array",
             "items": {
-              "type": "array"
-            },
-            "type": "array"
+              "type": "string"
+            }
           },
           "createdAt": {
             "format": "date-time",
@@ -1349,6 +1347,19 @@
           "createdAt",
           "updatedAt"
         ]
+      },
+      "UserProfilesResponseDto": {
+        "type": "object",
+        "properties": {
+          "profiles": {
+            "description": "List of user profiles",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/UserProfileDto"
+            }
+          }
+        },
+        "required": ["profiles"]
       },
       "ChatMessageWithAnswersDto": {
         "type": "object",
